@@ -118,10 +118,11 @@ CONFIG := --prefix=/usr \
 ifeq ($(DEB_HOST_ARCH_OS),linux)
 	CONFIG += --enable-libdc1394 \
 	--enable-libiec61883
+endif
+
 # libzvbi is not available on m68k
 ifneq ($(DEB_HOST_ARCH),m68k)
 	CONFIG += --enable-libzvbi
-endif
 endif
 
 # Some libraries are not build on hurd.
@@ -148,13 +149,13 @@ ifeq (,$(filter $(DEB_HOST_ARCH),m68k powerpcspe sh4 sparc64 x32))
 	CONFIG += --enable-libopencv
 endif
 
-# librtmp-dev is uninstallable on some architectures.
-ifeq (,$(filter $(DEB_HOST_ARCH),powerpcspe sparc64))
+# librtmp-dev is uninstallable on sparc64.
+ifeq (,$(filter $(DEB_HOST_ARCH),sparc64))
 	CONFIG += --enable-librtmp
 endif
 
 # X265 is not (yet) available on some architectures.
-ifeq (,$(filter $(DEB_HOST_ARCH),sparc hppa m68k powerpcspe sh4 sparc64 x32))
+ifeq (,$(filter $(DEB_HOST_ARCH),sparc m68k powerpcspe sh4 sparc64 x32))
 	CONFIG += --enable-libx265
 endif
 
